<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".ui.Puntos.ClientePuntoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/contentView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStartRonda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:padding="15dp"
                            android:text="@string/btn_start_ronda"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnScanCliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:padding="15dp"
                            android:text="@string/btn_scan_client"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:layout_marginVertical="20dp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/btnEndRonda"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:padding="15dp"
                            android:layout_marginVertical="20dp"

                            android:text="@string/btn_end_ronda"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/content3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnEndCliente"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorSecondary"
                            android:padding="15dp"
                            android:text="@string/btn_end_cliente"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvClientePunto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"></androidx.recyclerview.widget.RecyclerView>
                    </RelativeLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/content4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:visibility="gone"
                            android:text="@string/error_no_rondas"
                            android:textAlignment="center"
                            android:textColor="@color/colorsubtext"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress"
                android:maxHeight="140dip"
                android:minHeight="140dip"
                android:padding="100dp"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</FrameLayout>